--- a/contact-me.html
+++ b/contact-me.html
@@ -9,6 +9,7 @@
 <body>
   <h1>My Contact Details</h1>
   <p><em>Email:</em> thuymqhuynh@gmail.com</p>
+  <p><em>School Email:</em> tmhhhc@umsystem.edu</p>
   <p><em>Phone Number:</em> 816 716 5110</p>
 </body>
 
