--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <h2>Work Experience</h2>
   <strong>Argus Merchant Services</strong> | New York City, NY
-  <p>Sales/Financial Analyst (November 2016 - May 2017)</p>
+  <p>Sales Analyst (November 2016 - May 2017)</p>
   <ul>
     <li>Evaluating client's credit data and financial statements</li>
     <li>Preparing reports about the degree of risk in lending money to clients</li>
