--- a/contact-me.html
+++ b/contact-me.html
@@ -14,7 +14,7 @@
       <td> <a href="mailto:thuymqhuynh@gmail.com">thuymqhuynh@gmail.com </a></td>
     </tr>
     <tr>
-      <td><em>School Email</em></td>
+      <td><em>School Email:</em></td>
       <td><a href="mailto:tmhhhc@umsystem.edu">tmhhhc@umsystem.edu</a></td>
     </tr>
     <tr>
