--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   <h1>Thuy M Huynh</h1>
   <p><em>Graduate student at University of Missouri - Kansas City</em></p>
   <p>I am a business student who does coding as a hobby.
-    I love knowledge, I like to challege myself and I enjoy doing new things.
+    I love knowledge, I like to challenge myself and I enjoy doing new things.
     I want to be part of something greater than myself.
     My new journey in the next 3 years is getting a CPA. </p>
   <hr size="3" noshade>
   <h2>Education</h2>
   <ul>
     <li> <strong>University of Missouri - Kansas City</strong> </li>
-    <p>Master of Science in Accouting (Expected 2023)</p>
+    <p>Master of Science in Accounting (Expected 2023)</p>
     <li><strong>Keuka College</strong> </li>
-    <p>Master of Science in Magement</p>
+    <p>Master of Science in Management</p>
     <p>Graduated May 2016 | Keuka Park, NY</p>
     <p>Cumulative GPA: 3.66</p>
     <li><strong>Vietnam National University Ho Chi Minh City - University of Science</strong> </li>
@@ -31,15 +31,15 @@
   <hr>
   <h2>Skills</h2>
   <h3>Technical Skills</h3>
-  <p>Proficent with:</p>
+  <p>Proficient with:</p>
   <ul>
     <li>Microsoft Office</li>
-    <li>Analyze company's statements andd business charts</li>
+    <li>Analyze company's statements and business charts.</li>
     <li>HTML, CSS, Photoshop </li>
   </ul>
   <h3>Soft Skills</h3>
   <ul>
-    <li>Bilingual communicator (English,Vietnamese)</li>
+    <li>Bilingual communicator (English and Vietnamese)</li>
     <li>Problem solving</li>
     <li>Research</li>
     <li>Self-directed learning</li>
@@ -50,11 +50,11 @@
   <strong>Argus Merchant Services</strong> | New York City, NY
   <p>Sales Analyst (November 2016 - May 2017)</p>
   <ul>
-    <li>Evaluating client's credit data and financial statements</li>
-    <li>Preparing reports about the degree of risk in lending money to clients</li>
-    <li>Analyzing client records and using the data to recommend payments plans</li>
-    <li>Evaluating the financial status of clients</li>
-    <li>Cold calling and door-to-door sales</li>
+    <li>Evaluating client's credit data and financial statements.</li>
+    <li>Preparing reports about the degree of risk in lending money to clients.</li>
+    <li>Analyzing client records and using the data to recommend payments plans.</li>
+    <li>Evaluating the financial status of clients.</li>
+    <li>Cold calling and door-to-door sales.</li>
   </ul>
   <hr>
   <h2><a href="contact-me.html">My Contact</a></h2>
