--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
   <strong>Argus Merchant Services</strong> | New York City, NY
   <p>Sales Analyst (November 2016 - May 2017)</p>
   <ul>
-    <li>Evaluating client's credit data and financial statements.</li>
-    <li>Preparing reports about the degree of risk in lending money to clients.</li>
-    <li>Analyzing client records and using the data to recommend payments plans.</li>
-    <li>Evaluating the financial status of clients.</li>
-    <li>Cold calling and door-to-door sales.</li>
+    <li>Evaluated client's credit data and financial statements.</li>
+    <li>Prepared reports about the degree of risk in lending money to clients.</li>
+    <li>Analyzed client records and using the data to recommend payments plans.</li>
+    <li>Evaluated the financial status of clients.</li>
+    <li>Performed cold calling and door-to-door sales.</li>
   </ul>
   <hr>
   <h2><a href="contact-me.html">My Contact</a></h2>
