--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <h1>Thuy M Huynh</h1>
   <p><em>Graduate student at University of Missouri - Kansas City</em></p>
-  <p>I am a business student who does coding as a hobby.
-    I love knowledge, I like to challenge myself and I enjoy doing new things.
+  <p>I am a business guy also love coding.
+    I crave knowledge, I like to challenge myself and I enjoy doing new things.
     I want to be part of something greater than myself.
-    My new journey in the next 3 years is getting a CPA. </p>
+    My new journey in the next 3 years is granduate MS in Computer Science. </p>
   <hr size="3" noshade>
   <h2>Education</h2>
   <ul>
