--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <h2>Education</h2>
   <ul>
     <li> <strong>University of Missouri - Kansas City</strong> </li>
-    <p>Master of Science in Accounting (Expected 2023)</p>
+    <p>Master of Science in Computer Science (Expected 2023)</p>
     <li><strong>Keuka College</strong> </li>
     <p>Master of Science in Management</p>
     <p>Graduated May 2016 | Keuka Park, NY</p>
